objects/Release_Deliverable_Reviewer__c.object
<CustomObject>
    <fields>
        <fullName>Deliverable_Name__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverable Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Name__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Release_Name__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Release Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Deliverable_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Release Deliverable ID</label>
        <referenceTo>Release_Deliverable__c</referenceTo>
        <relationshipLabel>Release Deliverable Reviewers</relationshipLabel>
        <relationshipName>Release_Deliverable_Reviewers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Deliverable_Reviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Name</label>
        <type>Text</type>
    </fields>
    <label>Release Deliverable Reviewer</label>
    <nameField>
        <displayFormat>RDR-{0000}</displayFormat>
        <label>Release Deliverable Reviewer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Deliverable Reviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Release_Deliverable_Reviewer_Required</fullName>
        <active>true</active>
        <description>Release Deliverable Reviewer Required</description>
        <errorConditionFormula>ISBLANK( Reviewer__c )</errorConditionFormula>
        <errorDisplayField>Reviewer__c</errorDisplayField>
        <errorMessage>Release Deliverable Reviewer Required</errorMessage>
    </validationRules>
</CustomObject>